<resources>
    <string name="app_name">Campusमें</string>
    <string name="title_activity_main_home">Campusमें</string>
    <string name="partnerKey">zEBwB7f6ea2dd34664b2f875c03440ed9921f</string>
    <string name="my_profile">My Account</string>
    <string name="defaultNameText">Login to get started</string>
    <string name="defaultCollegeText"> </string>
    <string name="home">Home</string>
    <string name="myOrders">My Orders</string>
    <string name="mySells">My Sells</string>
    <string name="wishlist">Wishlist</string>
    <string name="notifications">Notifications</string>
    <string name="quick_help">Quick Help</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="bookType">B</string>
    <string name="instrumentType">I</string>
    <string name="comboType">C</string>
    <string name="combopack">Combopack</string>
    <string name="categoriesHeading">Categories</string>
    <string name="booksCategory">Books</string>
    <string name="book">Book</string>
    <string name="utilitiesCategory">Utilities</string>
    <string name="novelsCategory">Novels</string>
    <string name="servicesCategory">Services</string>
    <string name="instrumentsCategory">Instruments</string>
    <string name="instrument">Instrument</string>
    <string name="othersCategory">Others</string>
    <string name="topStores">Explore The Stores</string>
    <string name="dealsOfTheDay">Deals Of The Day</string>
    <string name="recommendedForYou">Recommended For You</string>
    <string name="whatDoYouWantToSell">What do you want to sell?</string>
    <string name="howItWorks">How it works?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="promiseText">We won’t post anything, promise!</string>
    <string name="continue_with">Continue with?</string>
    <string name="skip">SKIP</string>
    <string name="welcome">Welcome</string>
    <string name="app_logo">app logo</string>
    <string name="loading">Loading</string>
    <string name="lets_start">LET\'S START</string>
    <string name="login">Login</string>
    <string name="googleSignIn">Sign in with Google</string>
    <string name="retryLogin">Plese Retry login</string>
    <string name="select_course_year">Select Course Year</string>
    <string name="select_your_course">Select Your Course</string>
    <string name="select_your_college">Select Your College</string>
    <string name="infoCollectionError">Please enter all the details</string>
    <string name="order_history">Order History</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="rate_app">Rate App</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="full_name">FULL NAME</string>
    <string name="save_details">SAVE DETAILS</string>
    <string name="text_thanks_for_phone">Thankyou For Trusting us with your Phonenumber</string>
    <string name="saving">Saving</string>
    <string name="uploading">Uploading</string>
    <string name="no_changes_were_made">There are no changes to save.</string>
    <string-array name="courseYears">
        <item>Select Course Year</item>
        <item>F.E.</item>
        <item>S.E.</item>
        <item>T.E.</item>
        <item>B.E.</item>
    </string-array>
    <string-array name="semesters">
        <item>Select Sem</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="action_create_notification">Create Notification</string>
    <string name="title_activity_notification_parent">Notification Demo</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="notification_title">Open Web Content</string>
    <string name="notification_text">Open your web content on Chrome Custom Tabs</string>
    <string name="notification_sample_url">https://developer.chrome.com/multidevice/android/customtabs</string>
    <string name="label_url">URL:</string>
    <string name="default_test_url">http://developer.android.com</string>
    <string name="back_to_app">Back to your application!</string>
    <string name="label_start_custom_tab">Open Custom Tab</string>
    <string name="label_add_menus">Add Menus</string>
    <string name="label_add_action_button">Add Action Button</string>
    <string name="label_action">Perform Action</string>
    <string name="label_toobar_color">Toolbar Color:</string>
    <string name="default_toolbar_color">#980e03</string>
    <string name="menu_item_title">Sample Menu Item</string>
    <string name="label_may_launch_url">May Launch URL</string>
    <string name="title_activity_simple_chrome_tab">Simple Chrome Custom Tab</string>
    <string name="title_activity_customized_chrome_tab">Customized UI Chrome Custom Tab</string>
    <string name="title_activity_service_connection">Service Connection Activity</string>
    <string name="label_custom_back_button">Custom back button</string>
    <string name="label_show_title">Show title</string>
    <string name="label_auto_hide_appbar">Auto-hide AppBar</string>
    <string name="label_add_default_share">Add default share</string>
    <string name="label_toobar_secondary_color">Secondary Toolbar Color</string>
    <string name="label_add_toolbar_item">Add toolbar item</string>
    <string name="action_button_toast_text">Action Button Clicked with URL: %s</string>
    <string name="menu_item_toast_text">Menu Item Clicked with URL: %s</string>
    <string name="toolbar_toast_text">Toolbar Clicked with URL: %s</string>
    <string name="unknown_toast_text">Unknown Action Clicked with URL: %s</string>
    <string name="classUsers">http://api.backendless.com/test/data/Users</string>
    <string name="createUser">http://cmapi.flolabs.in/oldAPI/createUser.php</string>
    <string name="readUser">http://cmapi.flolabs.in/oldAPI/readUser.php</string>
    <string name="updateUser">http://cmapi.flolabs.in/oldAPI/updateUser.php</string>
    <string name="setting_up">Setting Up</string>
    <string name="setup_complete">Setup Complete</string>
    <string name="creatingUser">We are glad you joined us</string>
    <string name="updatingUser">Welcome back, just updating your info.</string>
    <string name="noUser">No user found</string>
    <string name="NetworkError">Oops… a Network Error occurred… Please Retry.</string>
    <string name="NetworkFaliure">No Data connection found. Please try again later.</string>
    <string name="good_connection">Good! Connected to Internet</string>
    <string name="filterTextBranch">Branch</string>
    <string name="filterTextSemester">Semester</string>
    <string name="filterTextSubject">Subject</string>
    <string name="price">price</string>
    <string name="publication">Publication</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="gettingCredentials">Getting Credentials</string>
    <string name="credentialFetcher">http://cmapi.flolabs.in/oldAPI/credentialfetcher.php</string>
    <string name="store">Store</string>
    <string name="baseBackendUrl">http://api.backendless.com/test/data/</string>
    <string name="products">products</string>
    <string name="buyPageVariables">http://cmapi.flolabs.in/oldAPI/hompageVariables.json</string>
    <string name="versionVariables">http://cmapi.flolabs.in/oldAPI/versionVariables.json</string>
    <string name="suggestionsDataset">http://cmapi.flolabs.in/oldAPI/suggestionsDataset.json</string>
    <string name="optionNotAvailable">Sorry the option is not available yet</string>
    <string name="branch_filterOptionTitle">Select Branch</string>
    <string name="ok_action">OK</string>
    <string name="semester_filterOptionTitle">Select Semester</string>
    <string name="subject_filterOptionTitle">Select Subject</string>
    <string name="action_cart">Shopping Cart</string>
    <string name="savingPhoneNumber">Saving Phone Number</string>
    <string name="PhoneNumberSaved">Contact Details Saved</string>
    <string name="productsImage">Image of the Product</string>
    <string name="addToCart">ADD TO CART</string>
    <string name="buyNow">BUY FOR</string>
    <string name="addToCartSmall">Add to Cart</string>
    <string name="rupeesSymbol">₹\t</string>
    <string name="priceEndSymbol">/-</string>
    <string name="mrp">MRP :</string>
    <string name="title">Title\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="condition">Condition\t\t\t\t\t\t\t\t</string>
    <string name="ISBN">ISBN\t\t\t\t\t\t\t\t\t\t\t\t</string>
    <string name="author">Author\t\t\t\t\t\t\t\t\t\t</string>
    <string name="publisher">Publisher\t\t\t\t\t\t\t\t</string>
    <string name="edition">Edition\t\t\t\t\t\t\t\t\t\t</string>
    <string name="pubYear">Publication Year\t</string>
    <string name="subjects">Subjects\t\t\t\t\t\t\t\t</string>
    <string name="term">Semester\t\t\t\t\t\t\t\t</string>
    <string name="course">Specialization\t\t\t</string>
    <string name="category">Category\t\t\t\t\t\t\t\t</string>
    <string name="newCondition">New</string>
    <string name="goodCondition">2nd Hand, good condition</string>
    <string name="badCondition">2nd Hand, worn out but usable</string>
    <string name="not_available">N/A</string>
    <string name="savedSuccessfully">Successfully Saved</string>
    <string name="rollingback">Reverting to previousdata</string>
    <string name="ISBNnoSpace">ISBN</string>
    <string name="byString">"By "</string>
    <string name="editionNoSpace">"Edition "</string>
    <string name="pubYearNoSpace">"Publication Year "</string>
    <string name="categoryNoSpace">"Category "</string>
    <string name="allType">A</string>
    <string name="emptyString"></string>
    <string name="removedText">Removed</string>
    <string name="percentageSymbol">% OFF</string>
    <string name="loadingCart">Gathering all items</string>
    <string name="quantity">Qty:\t</string>
    <string name="addedToCart">Item Added to cart</string>
    <string name="alreadyInCart">Already present in cart</string>
    <string name="myCart">My Cart</string>
    <string name="alreadyInWishlist">Already Present in Wishlist</string>
    <string name="removedFromWishlist">Removed From Wishlist</string>
    <string name="addedToWishlist">Item Added to Wishlist</string>
    <string name="let_s_shop_now">Let\'s Shop now</string>
    <string name="btn_continue">Continue</string>
    <string name="movedToWishlist">Item Successfully moved to wishlist</string>
    <string name="removedFromCart">Item Successfully removed from cart</string>
    <string name="totalItemsText">Total Items :\t\t</string>
    <string name="maxItemLimitReached">Maximum limit reached</string>
    <string name="maximumQuantityLimit">5</string>
    <string name="myWishlist">My Wishlist</string>
    <string name="addToWishlist">Add To Wishlist</string>
    <string name="btn_removeAllWishes">Remove All</string>
    <string name="signInBtnCart">SIGN IN</string>
    <string name="btn_place_order">Place Order</string>
    <string name="deliveryAt">Delivery at :\t\t</string>
    <string name="pleaseRestartApp">Network Error Occured, please Restart the App</string>
    <string name="emptyOrders">No Recent Orders found.</string>
    <string name="delayed">DELAYED</string>
    <string name="pending">PENDING</string>
    <string name="canceled">CANCELED</string>
    <string name="deliveryReady">READY</string>
    <string name="share_option_menu">Share</string>
</resources>