<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">





    <item
        android:id="@+id/action_add_wishlist"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/addToWishlist"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share_product"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share_option_menu"
        app:showAsAction="always"

        />
    <!--android:actionProviderClass="android.widget.ShareActionProvider"-->


    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_menu_cart"
        android:title="@string/action_cart"
        app:showAsAction="always" />


</menu>