<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/product_card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:layout_marginBottom="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/product_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/action_settings"
            android:src="@drawable/sidebar_header_background"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Title"
            android:text="Product Name "
            android:paddingBottom="@dimen/eightDP"
            android:paddingTop="@dimen/eightDP"
            android:layout_marginLeft="@dimen/eightDP"
            android:layout_marginRight="@dimen/eightDP"
            android:gravity="left"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingTop="@dimen/zeroDp"
            android:paddingLeft="@dimen/eightDP"
            android:paddingRight="@dimen/eightDP"
            android:paddingBottom="@dimen/eightDP"
            android:layout_gravity="center_vertical">
            <TextView
                android:id="@+id/product_publisher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:text="@string/publication"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"/>
            <TextView
                android:id="@+id/product_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Widget.ActionMode.Title"
                android:gravity="right|center_vertical"
                android:text="@string/price"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>