<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="flo.org.campusmein.app.Home.sell.SellFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/search_bar_margins"
        android:layout_marginLeft="@dimen/search_bar_margins"
        android:layout_marginRight="@dimen/search_bar_margins">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatDoYouWantToSell"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:padding="@dimen/search_bar_margins"
            android:textColor="?android:textColorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGray" />


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/search_bar_margins"
            android:padding="@dimen/search_bar_margins">

            <LinearLayout
                android:id="@+id/sell_booksCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_books_category"
                    />
                <TextView
                    android:text="@string/booksCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_bar_margins"/>


            </LinearLayout>
            <LinearLayout
                android:id="@+id/sell_utilitiesCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_utilities_category" />
                <TextView
                    android:text="@string/utilitiesCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_bar_margins"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/sell_novelsCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_novels_category" />
                <TextView
                    android:text="@string/novelsCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_bar_margins"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sell_instumentsCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_instruments_category" />
                <TextView
                    android:text="@string/instrumentsCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/search_bar_margins"/>

            </LinearLayout>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_how_works"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        card_view:cardCornerRadius="4dp"
        android:layout_marginTop="@dimen/search_bar_margins"
        android:layout_marginLeft="@dimen/search_bar_margins"
        android:layout_marginRight="@dimen/search_bar_margins"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/howItWorks"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:padding="@dimen/search_bar_margins"
            android:textColor="?android:textColorPrimary"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorGray" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/how_it_works"
            android:paddingLeft="@dimen/sixteenDp"
            android:paddingRight="@dimen/sixteenDp"
            />
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</FrameLayout>
